syntax = "proto3";

package rpcpb;

//protoc -Irpcpb --go_out=plugins=grpc:rpcpb/ rpcpb/rpc.proto

message GetRequest {
    bytes key = 1 ;
    bool serializable = 2 ;
}

message GetResponse {
    ResponseHeader header = 1;
    repeated KeyValue kvs = 2;
}

message KeyValue {
    bytes key = 1;
    bytes value = 2;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message ResponseHeader {
    uint64 cluster_id = 1;
    uint64 node_id = 2;
    uint64 consume_time = 3;
    string node_ip = 4;
}

message PutResponse {
    ResponseHeader header = 1;
}

service KV {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (PutResponse);
    
    rpc PutStream(stream PutRequest) returns (PutResponse);
}